# project-charon

./: .gitignore  .pre-commit-config.yaml  README.md  charon.py  main.py  pyproject.toml
config/: project-config-generated.yaml  project-config.yaml
data/: book_list.json  movie_and_show.json  sleep_tracking.json  substack_newsletters.json  youtube_channels.json
data/sessions/: session_ids.json
journal/: 2025-08-13.md  2025-08-14.md
notebooks/: testing_file_loading.ipynb
src/agents/: agent.py  big_boss_orchestrator_agent.py  books_agent.py  file_search_agent.py  github_agent.py  google_calendar_agent.py  home_agent.py  movies_agent.py  recommender_agent.py  task_agent.py
src/cli/: charon_cli.py
src/constants/: directories.py
src/pipelines/: running_big_boss_orchestrator.py  running_book_agent.py  running_calendar_agent.py  running_files_agent.py  running_github_agent.py  running_home_agent.py  running_movie_agent.py  running_recommender_agent.py  running_task_agent.py
src/playground/: playing_with_kokoro_tts.py  playing_with_nova_sonic.py  testing_stt.py
src/schemas/: calendar_agent_returns_schema.py  config_schema.py  file_agent_output_schema.py  file_search_returns_schemas.py  sleep_data_schema.py  substack_schema.py
src/tools/: big_boss_orchestrator_tools.py  books_tools.py  celander_tools.py  file_search_tools.py  home_agent_tools.py  movies_tools.py  recommender_agent_tools.py  sleep_tracking_tools.py  task_agent_tools.py
src/utils/: agent_session_tracker.py  callback_hanlder_subagents.py  charon_ascii_art.py  config_loader.py  prompts.py  (+8 more)
(+83 files in other folders)
